--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
                     <li class="portfolio-list">
                     <div class="portfolio-box">
                     <img src="./images/img1.jpg" alt="App" width="360" height="300">
-                    <p class="text-hidden">
+                    <p class="overlay">
                     14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App
                     </p>
                     </div>
@@ -258,7 +258,7 @@
                        <li class="portfolio-list">
                         <div class="portfolio-box">
                         <img src="./images/img2.jpg" alt="Marketing" width="360" height="300">
-                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Cashless Payment</h3>
@@ -268,7 +268,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-box">
                         <img src="./images/img3.jpg" alt="App" width="360" height="300">
-                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Meditation App</h3>
@@ -278,7 +278,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-box">
                         <img src="./images/img4.jpg" alt="Marketing" width="360" height="300">
-                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Taxi Service</h3>
@@ -288,7 +288,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-box">
                         <img src="./images/img5.jpg" alt="Design" width="360" height="300">
-                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Screen Illustrations</h3>
@@ -298,7 +298,7 @@
                     <li class="portfolio-list">
                         <div class="portfolio-box">
                         <img src="./images/img6.jpg" alt="Marketing" width="360" height="300">
-                        <p class="text-hidden">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
+                        <p class="overlay">14 Stylish and User-Friendly App Design Concepts · Task Manager App · Calorie Tracker App · Exotic Fruit Ecommerce App · Cloud Storage App</p>
                         </div>
                         <div class="portfolio-type-name">
                         <h3 class="name-portfolio">Online Courses</h3>
@@ -310,9 +310,44 @@
             </section>
     </main>
     <footer class="footer-page">
-        <div class="container">
+        <div class="container footer-container">
+            <div class="footer-left">
         <a href="./index.html" class="footer-logo">Web<span class="footer-accent">Studio</span></a>
         <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+        </div>
+        <div class="footer-right">
+            <p class="social-footer">Social media</p>
+            <ul class="footer-icons">
+                <li class="footer-icons-social">
+                    <a href="https://www.instagram.com/" target="_blank" class="footer-social">
+                        <svg class="social-media" width="24" height="24" fill="none">
+                            <use href="./images/icons.svg#icon-instagram"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-icons-social">
+                    <a href="https://www.twitter.com/" target="_blank" class="footer-social">
+                        <svg class="social-media" width="24" height="24">
+                            <use href="./images/icons.svg#icon-twitter"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-icons-social">
+                    <a href="https://www.facebook.com/" target="_blank" class="footer-social">
+                        <svg class="social-media" width="24" height="24">
+                            <use href="./images/icons.svg#icon-facebook"></use>
+                        </svg>
+                    </a>
+                </li>
+                <li class="footer-icons-social">
+                    <a href="https://www.linkedin.com/" target="_blank" class="footer-social">
+                        <svg class="social-media" width="24" height="24">
+                            <use href="./images/icons.svg#icon-linkedin"></use>
+                        </svg>
+                    </a>
+                </li>
+            </ul>
+        </div>
         </div>
     </footer>
 
